# humanoid-rl-tracking

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: reward.yaml
envs/: __init__.py  pure_sac_env.py  residual_fetchreach_env.py  residual_tracking_env.py  tracking_env.py
experiments/: curriculum_smoke.yaml  default.yaml  demo.yaml  m4_orient.yaml  orient_smoke.yaml  pure_sac.yaml  quick.yaml  sac_default.yaml  sac_fetchreach.yaml
outputs/: checkpoint_scan.json
outputs/best_model_eval/circle_action_noise/: metrics.json
outputs/best_model_eval/circle_clean/: metrics.json
outputs/best_model_eval/circle_delay_1/: metrics.json
outputs/best_model_eval/circle_obs_noise/: metrics.json
outputs/best_model_eval/figure8_clean/: metrics.json
outputs/best_model_eval/spline_clean/: metrics.json
outputs/final_eval/: episode_2_timeseries.npz  metrics.json
scripts/: check_robot_position.py  eval_policy.py  eval_suite.py  evaluate.py  evaluate_robustness.py  launch_fetchreach_v4.py  launch_official_fetchreach.py  live_viewer.py  plot_best_eval.py  plot_eval.py  preview_fetchreach.py  preview_trajectory.py  record_videos.py  scan_checkpoints.py  test_pd_controller.py  test_sac_setup.py  visualize_workspace.py
train/: __init__.py  callbacks.py  custom_networks.py  train_ppo.py  train_pure_sac.py  train_sac.py  train_sac_fetchreach.py
utils/: orientation_utils.py  trajectory_generator.py
utils/trajectories/: __init__.py  base.py  circle.py  figure_eight.py  spline.py
